--- a/Niall Ferguson - RobotTechTest/Test/BoardEx.RobotWars.csproj
+++ b/Niall Ferguson - RobotTechTest/Test/BoardEx.RobotWars.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Arena.cs" />
     <Compile Include="Commands\ICommand.cs" />
+    <Compile Include="CrashSensor.cs" />
     <Compile Include="Enums\Direction.cs" />
     <Compile Include="Commands\Move.cs" />
     <Compile Include="Program.cs" />
