--- a/Niall Ferguson - RobotTechTest/Test/BoardEx.RobotWars.csproj
+++ b/Niall Ferguson - RobotTechTest/Test/BoardEx.RobotWars.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FD8BC9E7-CDA9-4F6F-9E59-344ABF9C1317}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Test</RootNamespace>
     <AssemblyName>Test</AssemblyName>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,19 +48,14 @@
   <ItemGroup>
     <Compile Include="Arena.cs" />
     <Compile Include="Commands\ICommand.cs" />
-    <Compile Include="CrashSensor.cs" />
     <Compile Include="Enums\Direction.cs" />
     <Compile Include="Commands\Move.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
     <Compile Include="Commands\TurnLeft.cs" />
     <Compile Include="Commands\TurnRight.cs" />
     <Compile Include="RobotCommand.cs" />
     <Compile Include="SignalReciever.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
